# bnmetamodel_gh

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.py
bnmetamodel_gh/: BN_Metamodel_easy.py  BNdata.py  BayesianNetwork.py  Helper_functions.py  other_functions.py
