[tool.poetry]
name = "bnmetamodel_gh"
version = "0.0.1"
description = "bnmetamodel lib simplified for Lab Mouse grasshopper plugin"
authors = ["Zack Xuereb Conti <zackxconti@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^2.7.18"
libpgm = "^1.3"
pybbn = "^0.1.4"
scipy = "^0.18.1"
numpy = "^1.13.3"
pandas = "^0.19.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
